iris/docs/v1.6/_sources/iris/iris.txt
.. _iris:

============================
Iris reference documentation
============================


.. sidebar:: Modules in this package


   .. toctree::
      :maxdepth: 2
      :titlesonly:

      _pyke_rules/compiled_krb.rst
      analysis/cartography.rst
      analysis/interpolate.rst
      experimental/equalise_cubes.rst
      experimental/fileformats.rst
      experimental/raster.rst
      experimental/regrid.rst
      fileformats/_pyke_rules.rst
      fileformats/abf.rst
      fileformats/ff.rst
      fileformats/grib.rst
      fileformats/grib.rst
      fileformats/name_loaders.rst
      fileformats/netcdf.rst
      fileformats/pp.rst
      grib/grib_save_rules.rst
      grib/load_rules.rst
      integration/format_interop.rst
      iris/analysis.rst
      iris/aux_factory
      iris/config
      iris/coord_categorisation
      iris/coord_systems
      iris/coords
      iris/cube
      iris/exceptions
      iris/experimental.rst
      iris/fileformats.rst
      iris/io.rst
      iris/iterate
      iris/palette
      iris/pandas
      iris/plot
      iris/proxy
      iris/quickplot
      iris/std_names
      iris/symbols
      iris/tests.rst
      iris/time
      iris/unit
      iris/util
      tests/analysis.rst
      tests/experimental.rst
      tests/integration.rst
      tests/unit.rst
      unit/analysis.rst
      unit/coord_categorisation.rst
      unit/coords.rst
      unit/cube.rst
      unit/experimental.rst
      unit/fileformats.rst
      unit/io.rst
      unit/util.rst




    

.. currentmodule:: iris

.. automodule:: iris

In this module:

 * :py:obj:`load`
 * :py:obj:`load_cube`
 * :py:obj:`load_cubes`
 * :py:obj:`load_raw`
 * :py:obj:`save`
 * :py:obj:`Constraint`
 * :py:obj:`AttributeConstraint`
 * :py:obj:`sample_data_path`
 * :py:obj:`site_configuration`
 * :py:obj:`Future`
 * :py:obj:`FUTURE`


----------

.. autofunction:: iris.load

----------

.. autofunction:: iris.load_cube

----------

.. autofunction:: iris.load_cubes

----------

.. autofunction:: iris.load_raw

----------

.. autofunction:: iris.save

----------

Constraints are the mechanism by which cubes can be pattern matched and
filtered according to specific criteria.

Once a constraint has been defined, it can be applied to cubes using the
:meth:`Constraint.extract` method.

..

    .. autoclass:: iris.Constraint
        :members:
        :undoc-members:

----------

Provides a simple Cube-attribute based :class:`Constraint`.

..

    .. autoclass:: iris.AttributeConstraint
        :members:
        :undoc-members:

----------

.. autofunction:: iris.sample_data_path

----------


.. autodata:: iris.site_configuration

----------

Run-time configuration controller.

..

    .. autoclass:: iris.Future
        :members:
        :undoc-members:

----------


.. autodata:: iris.FUTURE

