iris/docs/v1.7/_sources/iris/iris.txt
.. _iris:

============================
Iris reference documentation
============================


.. sidebar:: Modules in this package


   .. toctree::
      :maxdepth: 1
      :titlesonly:

      _pyke_rules/compiled_krb.rst
      analysis/area_weighted.rst
      analysis/cartography.rst
      analysis/geometry.rst
      analysis/interpolate.rst
      analysis/interpolator.rst
      analysis/maths.rst
      compiled_krb/fc_rules_cf_fc.rst
      experimental/equalise_cubes.rst
      experimental/fileformats.rst
      experimental/raster.rst
      experimental/regrid.rst
      experimental/regrid.rst
      fileformats/_pyke_rules.rst
      fileformats/abf.rst
      fileformats/ff.rst
      fileformats/grib.rst
      fileformats/grib.rst
      fileformats/name_loaders.rst
      fileformats/netcdf.rst
      fileformats/nimrod_load_rules.rst
      fileformats/pp.rst
      fileformats/pp_rules.rst
      fileformats/pyke_rules.rst
      fileformats/rules.rst
      fileformats/structured_array_identification.rst
      grib/grib_save_rules.rst
      grib/load_rules.rst
      integration/concatenate.rst
      integration/format_interop.rst
      integration/plot.rst
      iris/analysis.rst
      iris/aux_factory
      iris/config
      iris/coord_categorisation
      iris/coord_systems
      iris/coords
      iris/cube
      iris/exceptions
      iris/experimental.rst
      iris/fileformats.rst
      iris/io.rst
      iris/iterate
      iris/palette
      iris/pandas
      iris/plot
      iris/proxy
      iris/quickplot
      iris/std_names
      iris/symbols
      iris/tests.rst
      iris/time
      iris/unit
      iris/util
      pyke_rules/compiled_krb.rst
      tests/analysis.rst
      tests/experimental.rst
      tests/integration.rst
      tests/unit.rst
      unit/analysis.rst
      unit/aux_factory.rst
      unit/concatenate.rst
      unit/coord_categorisation.rst
      unit/coord_systems.rst
      unit/coords.rst
      unit/cube.rst
      unit/experimental.rst
      unit/fileformats.rst
      unit/io.rst
      unit/merge.rst
      unit/plot.rst
      unit/quickplot.rst
      unit/tests.rst
      unit/unit.rst
      unit/util.rst




    

.. currentmodule:: iris

.. automodule:: iris

In this module:

 * :py:obj:`load`
 * :py:obj:`load_cube`
 * :py:obj:`load_cubes`
 * :py:obj:`load_raw`
 * :py:obj:`save`
 * :py:obj:`Constraint`
 * :py:obj:`AttributeConstraint`
 * :py:obj:`sample_data_path`
 * :py:obj:`site_configuration`
 * :py:obj:`Future`
 * :py:obj:`FUTURE`



.. autofunction:: iris.load


.. raw:: html

    <p class="hr_p"><a href="#">&uarr;&#32&#32 top &#32&#32&uarr;</a></p>
    <!--
-----------

.. raw:: html

    -->


.. autofunction:: iris.load_cube


.. raw:: html

    <p class="hr_p"><a href="#">&uarr;&#32&#32 top &#32&#32&uarr;</a></p>
    <!--
-----------

.. raw:: html

    -->


.. autofunction:: iris.load_cubes


.. raw:: html

    <p class="hr_p"><a href="#">&uarr;&#32&#32 top &#32&#32&uarr;</a></p>
    <!--
-----------

.. raw:: html

    -->


.. autofunction:: iris.load_raw


.. raw:: html

    <p class="hr_p"><a href="#">&uarr;&#32&#32 top &#32&#32&uarr;</a></p>
    <!--
-----------

.. raw:: html

    -->


.. autofunction:: iris.save


.. raw:: html

    <p class="hr_p"><a href="#">&uarr;&#32&#32 top &#32&#32&uarr;</a></p>
    <!--
-----------

.. raw:: html

    -->


Constraints are the mechanism by which cubes can be pattern matched and
filtered according to specific criteria.

Once a constraint has been defined, it can be applied to cubes using the
:meth:`Constraint.extract` method.

..

    .. autoclass:: iris.Constraint
        :members:
        :undoc-members:
        :inherited-members:


.. raw:: html

    <p class="hr_p"><a href="#">&uarr;&#32&#32 top &#32&#32&uarr;</a></p>
    <!--
-----------

.. raw:: html

    -->


Provides a simple Cube-attribute based :class:`Constraint`.

..

    .. autoclass:: iris.AttributeConstraint
        :members:
        :undoc-members:
        :inherited-members:


.. raw:: html

    <p class="hr_p"><a href="#">&uarr;&#32&#32 top &#32&#32&uarr;</a></p>
    <!--
-----------

.. raw:: html

    -->


.. autofunction:: iris.sample_data_path


.. raw:: html

    <p class="hr_p"><a href="#">&uarr;&#32&#32 top &#32&#32&uarr;</a></p>
    <!--
-----------

.. raw:: html

    -->



.. autodata:: iris.site_configuration


.. raw:: html

    <p class="hr_p"><a href="#">&uarr;&#32&#32 top &#32&#32&uarr;</a></p>
    <!--
-----------

.. raw:: html

    -->


Run-time configuration controller.

..

    .. autoclass:: iris.Future
        :members:
        :undoc-members:
        :inherited-members:


.. raw:: html

    <p class="hr_p"><a href="#">&uarr;&#32&#32 top &#32&#32&uarr;</a></p>
    <!--
-----------

.. raw:: html

    -->



.. autodata:: iris.FUTURE

